--- a/templates/index.html
+++ b/templates/index.html
@@ -14,6 +14,7 @@
       <li><a href="/">Главная</a></li>
       <li><a href="/create-profile">Создать профиль</a></li>
       <li><a href="/profiles">Все профили</a></li>
+      <li><a href="/create-event">Создать событие</a></li>
     </ul>
   </div>
 </nav>
